--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extend Mongoose 4+ population with virtual attributes that can be populated in either direction.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha test --reporter dot"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,9 @@
   "homepage": "https://github.com/alexmingoia/mongoose-populate-virtuals",
   "peerDependencies": {
     "mongoose": "^4.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3",
+    "mongoose": "^4.1.8"
   }
 }
